--- a/index.html
+++ b/index.html
@@ -106,6 +106,30 @@
             </p>
           </div>
         </article>
+        <article class="projects__card">
+  <div class="projects__body">
+    <h3 class="projects__title">Hangman</h3>
+    <p class="projects__description">
+      A classic word-guessing game built with HTML, CSS, and JavaScript.
+    </p>
+  </div>
+</article>
+<article class="projects__card">
+  <div class="projects__body">
+    <h3 class="projects__title">Morse Code Translator</h3>
+    <p class="projects__description">
+      A web app that translates text to Morse code and vice versa, using HTML, CSS, and JavaScript.
+    </p>
+  </div>
+</article>
+<article class="projects__card">
+  <div class="projects__body">
+    <h3 class="projects__title">Google books</h3>
+    <p class="projects__description">
+      A book search application using the Google Books API, built with HTML, CSS, and React/JavaScript.
+    </p>
+  </div>
+</article>
       </div>
     </section>
 
