--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="header__inner">
       <a href="#landing" class="header__logo">SJ</a>
 
+      <input type="checkbox" id="nav-toggle" class="header__checkbox" />
+
       <label for="nav-toggle" class="header__toggle" aria-label="Toggle menu">
         <span class="header__bar"></span>
         <span class="header__bar"></span>
